--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,33 @@
-services: {}
+services:
+  api:
+    container_name: blog_api
+    build:
+      context: .
+      target: development
+    ports:
+      - "8080:8080"
+      - "5005:5005"
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+  postgres:
+    container_name: blog_postgres
+    image: postgres:18.1
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: blogly
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: open_blog
+    volumes:
+      - postgres_data:/var/lib/postgresql
+    healthcheck:
+      test: [ "CMD", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
