--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       target: development
     ports:
-      - "8080:8080"
+      - "8081:8080"
       - "5005:5005"
     depends_on:
       postgres:
@@ -24,7 +24,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: [ "CMD", "pg_isready", "-U", "blogly", "-d", "open_blog" ]
       interval: 10s
       timeout: 5s
       retries: 5
