--- a/compose.yaml
+++ b/compose.yaml
@@ -7,24 +7,26 @@ services:
     ports:
       - "8081:8080"
       - "5005:5005"
+    env_file:
+      - .env
     depends_on:
       postgres:
         condition: service_healthy
 
   postgres:
-    container_name: blog_postgres
+    container_name: blog_db
     image: postgres:18.1
     restart: always
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: blogly
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: open_blog
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "blogly", "-d", "open_blog" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} -h localhost" ]
       interval: 10s
       timeout: 5s
       retries: 5
