--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Open Blog
+    name: Blogly
   datasource:
     url: ${DATASOURCE_URL}
     username: ${POSTGRES_USER}
